--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Jan Sechovsky</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="http://cdn.onlinewebfonts.com/svg/img_244356.png">
+    <link rel="icon" href="favicon-2.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
